[package]
name = "converter"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eframe = { version = "0.27", features = ["glow"] }
egui = "0.27"
egui_extras = { version = "0.27", features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png", "bmp"] }
rfd = "0.14"
env_logger = "0.10"

[dev-dependencies]
tempfile = "3.10"
